[gd_scene load_steps=16 format=2]

[ext_resource path="res://levels/Anxiety-1.gd" type="Script" id=1]
[ext_resource path="res://assets/images/blue.png" type="Texture" id=2]
[ext_resource path="res://objects/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/DefaultObstacle.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/FakeObstacle.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Key.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/qubodup-DoorOpen06.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/qubodup-DoorClose06.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Picked Coin Echo.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/Fear.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/fonts/CrayonHandRegular2016Demo.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/images/key.png" type="Texture" id=12]
[ext_resource path="res://player/Player1.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 11 )

[node name="Anxiety" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 934.754, 525.509 )
scale = Vector2( 2907.62, 1553.33 )
texture = ExtResource( 2 )

[node name="Door" parent="." instance=ExtResource( 3 )]
position = Vector2( 1813.04, 220.726 )

[node name="Obstacles" type="Node" parent="."]

[node name="Floor" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 942.108, 1030.66 )
scale = Vector2( 2000, 150 )

[node name="Wall1" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( -54.7673, 110.626 )
scale = Vector2( 100, 2000 )

[node name="Wall2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1975.3, 106.057 )
scale = Vector2( 100, 2000 )

[node name="Wall3" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1447.76, 649.226 )
rotation = 0.349066
scale = Vector2( 300, 50 )

[node name="Floor2" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 147.938, 542.673 )
scale = Vector2( 400, 50 )

[node name="Floor3" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 694.085, 658.159 )
rotation = -0.174533
scale = Vector2( 400, 50 )

[node name="Floor4" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 1741.01, 361.58 )
scale = Vector2( 550, 50 )

[node name="Ceiling1" parent="Obstacles" instance=ExtResource( 4 )]
position = Vector2( 188.279, 33.0169 )
scale = Vector2( 500, 100 )

[node name="FakeObstacle1" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 555.663, 475.641 )
scale = Vector2( 300, 50 )

[node name="FakeObstacle2" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 913.989, 425.756 )
scale = Vector2( 300, 50 )

[node name="FakeObstacle3" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 1258.86, 373.835 )
scale = Vector2( 300, 50 )

[node name="FakeObstacle4" parent="Obstacles" instance=ExtResource( 5 )]
position = Vector2( 1889.19, 40.7035 )
scale = Vector2( 450, 100 )

[node name="Keys" type="Node" parent="."]

[node name="Key1" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 280.35, 326.019 )

[node name="Key2" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 918.043, 237.355 )

[node name="Key3" parent="Keys" groups=[
"key",
] instance=ExtResource( 6 )]
position = Vector2( 1610.57, 203.233 )

[node name="DoorSoundOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DoorSoundClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
autoplay = true

[node name="Hint" type="Label" parent="."]
margin_left = 614.175
margin_top = 809.637
margin_right = 1331.18
margin_bottom = 894.637
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ás vezes o caminho é mais longo do que
parece mas sempre tem uma solução."

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = -1

[node name="LabelTitle" type="Label" parent="CanvasLayer"]
margin_left = 11.0034
margin_top = 7.5622
margin_right = 272.003
margin_bottom = 72.5623
custom_fonts/font = SubResource( 2 )
text = "Ansiedade - 1"

[node name="LabelKeys" type="Label" parent="CanvasLayer"]
margin_left = 1800.62
margin_top = 9.53419
margin_right = 1927.62
margin_bottom = 74.5345
custom_fonts/font = SubResource( 2 )
text = "0/3"

[node name="key" type="Sprite" parent="CanvasLayer/LabelKeys"]
position = Vector2( -34.5183, 28.6721 )
scale = Vector2( 4, 4 )
texture = ExtResource( 12 )

[node name="Player" parent="." groups=[
"player",
] instance=ExtResource( 13 )]
position = Vector2( 121.266, 244.583 )
scale = Vector2( 4, 4 )
